# youtube-shorts-generator

./: .gitignore  README.md  deploy_hunyuan.py  main.py  pyproject.toml  runpod_deployer.py
agents/: base_agent.py  orchestrator.py  quality_reviewer.py  script_analyzer.py  video_planner.py
design/: implementation_v1_assessment.md  implementation_v2_plan.md  video_generation_design.md
managers/: asset_manager.py  pipeline_factory.py  pipeline_manager.py
models/: script_model.py  video_plan.py  video_types.py
protocols/: image_protocol.py  llm_protocol.py  pipeline_protocol.py  tts_protocol.py
services/: hunyuan_client.py  hunyuan_scene_renderer.py  image_prep.py  image_service.py  llm_service.py  scene_renderer.py  tts_service.py  video_assembler.py  video_assembly.py  video_generation_factory.py  video_generation_pipeline.py
services/image_backends/: base.py  dalle_backend.py  fallback_backend.py  huggingface_backend.py
services/tts_backends/: base.py  openai_backend.py
