[project]
name = "youtube-shorts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "moviepy>=1.0.3,<2.0",
    "pillow>=10.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "imageio>=2.33.0",
    "imageio-ffmpeg>=0.4.9",
    "decorator>=4.4.2",
    "proglog>=0.1.9",
    "langfuse>=2.0.0",
]
